Allow the GARM agent to connect to GARM insecurely
This is mostly for testing and as a temporary stopgap for environments
that need time to transition GARM to TLS.

The change surfaces the force_insecure option added in the garm-agent
v0.1.1.
